Add jquery to style 'back to' links, center images

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,4 +10,8 @@
     <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
     <link rel="stylesheet" href="{{ "/css/monokai.css" | prepend: site.baseurl }}">
 
+    <!-- Custom javascript -->
+    <script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
+    <script src="{{ "/js/main.js" | prepend: site.baseurl }}"></script>
+
 </head>
