--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,36 +1,15 @@
 ---
 layout: default
 ---
-<div class="post">
+<article class="post" itemscope itemtype="http://schema.org/BlogPosting">
 
   <header class="post-header">
-
-    <h1>{{ page.title }}</h1>
-    <p class="meta">{{ page.date | date: "%b %-d, %Y" }}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
+    <h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
+    <p class="post-meta"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>{% if page.author %} • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}</p>
   </header>
 
-  <article class="post-content">
-  {{ content }}
-  </article>
+  <div class="post-content" itemprop="articleBody">
+    {{ content }}
+  </div>
 
-</div>
-
-{% if page.comments %}
-  <div id="disqus_thread"></div>
-  <script>
-    var disqus_config = function () {
-      this.page.url = "{{ site.url }}{{ page.url }}";
-      this.page.identifier = "{{ page.url }}";
-      this.page.title = "{{ page.title }}";
-    };
-    (function() {
-      var d = document, s = d.createElement('script');
-      s.type = 'text/javascript';
-      s.async = true;
-      s.src = '//pawamoy.disqus.com/embed.js';
-      s.setAttribute('data-timestamp', +new Date());
-      (d.head || d.body).appendChild(s);
-    })();
-  </script>
-  <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
-{% endif %}
+</article>
