Readd config and stuff

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,4 +9,8 @@
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
+
+  <link rel="stylesheet" href="{{ "/css/monokai.css" | prepend: site.baseurl }}">
+  <script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
+  <script src="{{ "/js/main.js" | prepend: site.baseurl }}"></script>
 </head>
