--- a/css/monokai.css
+++ b/css/monokai.css
@@ -1,5 +1,5 @@
 /* Monokai Theme from https://github.com/jwarby/jekyll-pygments-themes */
-.highlight pre { background-color: #272822; }
+.highlight { background-color: #272822; }
 .highlight .hll { background-color: #272822; }
 .highlight .c { color: #75715e } /* Comment */
 .highlight .err { color: #960050; background-color: #1e0010 } /* Error */
