Deactivate comments temporarily

--- a/docs/templates/post.html
+++ b/docs/templates/post.html
@@ -1,5 +1,13 @@
 {% extends "main.html" %}
 
+{% block announce %}
+  <b>🚧 Comments are temporarily deactivated. 🚧</b><br>
+  The reason is: Disqus fails at migrating them to the new URLs.
+  I will replace Disqus with <a href="https://posativ.org/isso/"><code>Isso</code></a> shortly.
+  The past comments are safe, and I will re-import them in Isso
+  once I have it installed on a personal server.
+ {% endblock %}
+
 {% block content %}
   <h1>{{ page.title }}</h1>
   <p class="post-meta">
