Make showcase mobile-friendly

--- a/docs/templates/showcase.html
+++ b/docs/templates/showcase.html
@@ -11,12 +11,8 @@
 {% for row in page.meta.projects|sort(attribute="name")|batch(3) %}
 <tr>
   {% for project in row %}
-  <td><strong><a href="/showcase/{{ project.name }}">{{ project.name }}</a></strong></td>
-  {% endfor %}
-</tr>
-<tr>
-  {% for project in row %}
   <td>
+    <p><strong><a href="/showcase/{{ project.name }}">{{ project.name }}</a></strong></p>
     <p>{{ project.description }}</p>
     <a href="/showcase/{{ project.name }}"><img class="hover-grow" src="/assets/{{ project.image }}"/></a>
   </td>
