--- a/docs/css/showcase.css
+++ b/docs/css/showcase.css
@@ -1,3 +1,8 @@
+h1 {
+  display: none;
+}
+
+/* big screens */
 @media only screen and (min-width: 76.25em) {
   .md-main__inner {
     max-width: none;
@@ -15,34 +20,37 @@
   .md-content {
     max-width: none;
   }
+
+  .showcase-table table {
+    table-layout: fixed;
+    width: 100px;
+  }
+
+  .showcase-table tr td {
+    padding: 0 40px 10px !important;
+    width: 33% !important;
+  }
+
+  tr {
+    text-align: center;
+  }
+
+  /* Credits to https://github.com/IanLunn/Hover */
+  .hover-grow {
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-property: transform;
+    transition-property: transform;
+  }
+  .hover-grow:hover, .hover-grow:focus, .hover-grow:active {
+    -webkit-transform: scale(1.05);
+    transform: scale(1.05);
+  }
 }
 
-h1 {
-  display: none;
-}
-
-.showcase-table table {
-  table-layout: fixed;
-  width: 100px;
-}
-
-.showcase-table tr td {
-  padding: 0 40px 10px !important;
-  width: 33% !important;
-}
-
-tr:nth-child(2n+1) {
-  text-align: center;
-}
-
-/* Credits to https://github.com/IanLunn/Hover */
-.hover-grow {
-  -webkit-transition-duration: 0.3s;
-  transition-duration: 0.3s;
-  -webkit-transition-property: transform;
-  transition-property: transform;
-}
-.hover-grow:hover, .hover-grow:focus, .hover-grow:active {
-  -webkit-transform: scale(1.05);
-  transform: scale(1.05);
+/* small screens */
+@media only screen and (max-width: 76.25em) {
+  .showcase-table tr td {
+    display: block;
+  }
 }
