Add links to posts on images

--- a/docs/templates/posts_list.html
+++ b/docs/templates/posts_list.html
@@ -6,10 +6,10 @@
     {% if page.url.startswith("posts/") %}
       <hr>
       <span class="post-date">{{ page.meta.date.strftime("%b %d, %Y") }}</span>
-      <h2 class="post-title"><a href="{{ page.url }}" >{{ page.title }}</a></h1>
+      <h2 class="post-title"><a href="{{ page.url }}">{{ page.title }}</a></h1>
       {{ page.content.split("<!--more-->", 1)[0] }}
       {% if page.meta.image %}
-        <div class="post-excerpt-image"><img src="{{ page.meta.image }}"/></div>
+        <div class="post-excerpt-image"><a href="{{ page.url }}"><img src="{{ page.meta.image }}"/></a></div>
       {% endif %}
     {% endif %}
   {% endfor %}
