Improve colors and other various things

--- a/docs/css/custom.css
+++ b/docs/css/custom.css
@@ -18,11 +18,11 @@
 
 .post-title {
   margin-top: 0 !important;
+  margin-bottom: 0 !important;
 }
 
 .post-meta {
   font-size: 0.8em;
   text-decoration: underline;
-  color: grey;
   text-align: right;
 }
