--- a/docs/css/custom.css
+++ b/docs/css/custom.css
@@ -26,3 +26,8 @@
   text-decoration: underline;
   text-align: right;
 }
+
+/* More space at the bottom of the page */
+.md-footer {
+  margin-top: 1.5rem;
+}
