Target .md-main__inner instead

--- a/docs/css/custom.css
+++ b/docs/css/custom.css
@@ -28,6 +28,6 @@
 }
 
 /* More space at the bottom of the page */
-.md-footer {
-  margin-top: 1.5rem;
+.md-main__inner {
+  margin-bottom: 1.5rem;
 }
