--- a/docs/css/insiders.css
+++ b/docs/css/insiders.css
@@ -14,17 +14,39 @@
 }
 
 @keyframes vibrate {
-  0%, 2%, 4%, 6%, 8%, 10%, 12%, 14%, 16%, 18% {
+
+  0%,
+  2%,
+  4%,
+  6%,
+  8%,
+  10%,
+  12%,
+  14%,
+  16%,
+  18% {
     -webkit-transform: translate3d(-2px, 0, 0);
-            transform: translate3d(-2px, 0, 0);
+    transform: translate3d(-2px, 0, 0);
   }
-  1%, 3%, 5%, 7%, 9%, 11%, 13%, 15%, 17%, 19% {
+
+  1%,
+  3%,
+  5%,
+  7%,
+  9%,
+  11%,
+  13%,
+  15%,
+  17%,
+  19% {
     -webkit-transform: translate3d(2px, 0, 0);
-            transform: translate3d(2px, 0, 0);
+    transform: translate3d(2px, 0, 0);
   }
-  20%, 100% {
+
+  20%,
+  100% {
     -webkit-transform: translate3d(0, 0, 0);
-            transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
   }
 }
 
@@ -62,7 +84,8 @@ a.insiders {
   width: 1.6rem;
 }
 
-.sponsorship-item:focus, .sponsorship-item:hover {
+.sponsorship-item:focus,
+.sponsorship-item:hover {
   transform: scale(1.1);
 }
 
@@ -72,7 +95,8 @@ a.insiders {
   width: 100%;
 }
 
-.sponsorship-item:focus img, .sponsorship-item:hover img {
+.sponsorship-item:focus img,
+.sponsorship-item:hover img {
   filter: grayscale(0);
 }
 
@@ -95,4 +119,27 @@ a.insiders {
   transition: all .25s;
   vertical-align: bottom !important;
   width: 1.2rem;
+}
+
+.premium-sponsors {
+  text-align: center;
+}
+
+.premium-sponsors .silver img {
+  height: 140px;
+}
+
+.premium-sponsors .bronze img {
+  height: 140px;
+}
+
+.premium-sponsors .bronze p {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.premium-sponsors .bronze a {
+  display: block;
+  flex-shrink: 0;
 }
