--- a/docs/css/insiders.css
+++ b/docs/css/insiders.css
@@ -14,39 +14,17 @@
 }
 
 @keyframes vibrate {
-
-  0%,
-  2%,
-  4%,
-  6%,
-  8%,
-  10%,
-  12%,
-  14%,
-  16%,
-  18% {
+  0%, 2%, 4%, 6%, 8%, 10%, 12%, 14%, 16%, 18% {
     -webkit-transform: translate3d(-2px, 0, 0);
-    transform: translate3d(-2px, 0, 0);
+            transform: translate3d(-2px, 0, 0);
   }
-
-  1%,
-  3%,
-  5%,
-  7%,
-  9%,
-  11%,
-  13%,
-  15%,
-  17%,
-  19% {
+  1%, 3%, 5%, 7%, 9%, 11%, 13%, 15%, 17%, 19% {
     -webkit-transform: translate3d(2px, 0, 0);
-    transform: translate3d(2px, 0, 0);
+            transform: translate3d(2px, 0, 0);
   }
-
-  20%,
-  100% {
+  20%, 100% {
     -webkit-transform: translate3d(0, 0, 0);
-    transform: translate3d(0, 0, 0);
+            transform: translate3d(0, 0, 0);
   }
 }
 
@@ -84,8 +62,7 @@ a.insiders {
   width: 1.6rem;
 }
 
-.sponsorship-item:focus,
-.sponsorship-item:hover {
+.sponsorship-item:focus, .sponsorship-item:hover {
   transform: scale(1.1);
 }
 
@@ -95,8 +72,7 @@ a.insiders {
   width: 100%;
 }
 
-.sponsorship-item:focus img,
-.sponsorship-item:hover img {
+.sponsorship-item:focus img, .sponsorship-item:hover img {
   filter: grayscale(0);
 }
 
@@ -125,21 +101,25 @@ a.insiders {
   text-align: center;
 }
 
-.premium-sponsors .silver img {
+#silver-sponsors img {
   height: 140px;
 }
 
-.premium-sponsors .bronze img {
+#bronze-sponsors img {
   height: 140px;
 }
 
-.premium-sponsors .bronze p {
+#bronze-sponsors p {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
 }
 
-.premium-sponsors .bronze a {
+#bronze-sponsors a {
   display: block;
   flex-shrink: 0;
+}
+
+.sponsors-total {
+  font-weight: bold;
 }
