Make Giscus search strict

--- a/docs/templates/partials/comments.html
+++ b/docs/templates/partials/comments.html
@@ -9,6 +9,7 @@
         data-category="General"
         data-category-id="DIC_kwDOA1Cmvs4CPVxB"
         data-mapping="pathname"
+        data-strict="1"
         data-reactions-enabled="0"
         data-emit-metadata="0"
         data-input-position="bottom"
